--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>ChatGPT</title>
-    <meta charset="UTF-8">
+    <title>Lwandle Ai</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
-
 <body>
-    <!-- partial:index.partial.html -->
     <section class="msger">
         <header class="msger-header">
             <div class="msger-header-title">
-                <i>🤖 Powered by gpt3.5-turbo🤖</i>
+                <i>Lwandle AI</i>
             </div>
         </header>
 
@@ -27,34 +23,29 @@
 
                 <div class="msg-bubble">
                     <div class="msg-info">
-                        <div class="msg-info-name">GPT3.5 Turbo</div>
+                      
                         <div class="msg-info-time"></div>
                     </div>
 
                     <div class="msg-text">
-                        Hi, welcome to chatGPT3.5 TURBO! Say something crazy. 😄
+                        Hey. 🦋 Wanna Chat ✨ ?
                     </div>
                 </div>
             </div>
-
         </main>
 
         <form class="msger-inputarea">
             <input type="text" class="msger-input" id="textInput" placeholder="Enter your message...">
             <button type="submit" class="msger-send-btn">Send</button>
         </form>
-
     </section>
 
-    <!-- partial -->
     <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
     <script>
-
         const msgerForm = get(".msger-inputarea");
         const msgerInput = get(".msger-input");
         const msgerChat = get(".msger-chat");
 
-        // Icons made by Freepik from www.flaticon.com
         const BOT_IMG = "https://img.icons8.com/dotty/160/futurama-bender.png";
         const PERSON_IMG = "https://img.icons8.com/ios-filled/512/guest-male.png";
         const BOT_NAME = "ChatGPT";
@@ -72,14 +63,12 @@
         });
 
         function appendMessage(name, img, side, text) {
-            //   Simple solution for small apps
             const msgHTML = `
         <div class="msg ${side}-msg">
         <div class="msg-img" style="background-image: url(${img})"></div>
 
         <div class="msg-bubble">
             <div class="msg-info">
-            <div class="msg-info-name">${name}</div>
             <div class="msg-info-time">${formatDate(new Date())}</div>
             </div>
 
@@ -93,19 +82,12 @@
         }
 
         function botResponse(rawText) {
-
-            // Bot Response
             $.get("/get", { msg: rawText }).done(function (data) {
-                console.log(rawText);
-                console.log(data);
                 const msgText = data;
                 appendMessage(BOT_NAME, BOT_IMG, "left", msgText);
-
             });
-
         }
 
-        // Utils
         function get(selector, root = document) {
             return root.querySelector(selector);
         }
@@ -116,9 +98,7 @@
 
             return `${h.slice(-2)}:${m.slice(-2)}`;
         }
-
     </script>
-
 </body>
-
+</html>
 </html>
