--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,9 +1,13 @@
 :root {
-    --body-bg: linear-gradient(225deg, #FFB6C1 0%, #FF69B4 50%, #DB7093 100%);
-    --msger-bg: rgba(255, 255, 255, 0.8);
-    --border: 2px solid #000000;
-    --left-msg-bg: #f8e1f4;
-    --right-msg-bg: #ff99cc;
+    --body-bg: linear-gradient(225deg, #2B2D42, #343650);
+    --msger-bg: #1E1E2C;
+    --border: 2px solid #FF69B4;
+    --left-msg-bg: #FF69B4;
+    --right-msg-bg: #4A4E69;
+    --input-bg: #2D2F3A;
+    --input-text: #FFC1E3;
+    --button-bg: #FF1493;
+    --button-hover: #FF69B4;
 }
 
 body {
@@ -14,7 +18,7 @@ body {
     margin: 0;
     background-image: var(--body-bg);
     font-family: 'Poppins', sans-serif;
-    color: #5A5A5A;
+    color: #FFF;
 }
 
 .msger {
@@ -27,8 +31,7 @@ body {
     border: var(--border);
     border-radius: 10px;
     background: var(--msger-bg);
-    box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(10px);
+    box-shadow: 0 15px 15px -5px rgba(0, 0, 0, 0.5);
 }
 
 .msger-header {
@@ -37,15 +40,15 @@ body {
     padding: 10px;
     text-align: center;
     border-bottom: var(--border);
-    background: #FF1493;
-    color: #fff;
+    background: #28293E;
+    color: #FF69B4;
 }
 
 .msger-chat {
     flex: 1;
     overflow-y: auto;
     padding: 10px;
-    background-color: rgba(255, 240, 245, 0.8);
+    background-color: #1E1E2C;
 }
 
 .msg-bubble {
@@ -53,12 +56,21 @@ body {
     padding: 15px;
     border-radius: 15px;
     background: var(--left-msg-bg);
-    backdrop-filter: blur(5px);
+}
+
+.left-msg .msg-bubble {
+    border-bottom-left-radius: 0;
+    background: var(--left-msg-bg);
+    color: #FFF;
+}
+
+.right-msg {
+    flex-direction: row-reverse;
 }
 
 .right-msg .msg-bubble {
     background: var(--right-msg-bg);
-    color: #fff;
+    color: #FFC1E3;
     border-bottom-right-radius: 0;
 }
 
@@ -66,25 +78,30 @@ body {
     display: flex;
     padding: 10px;
     border-top: var(--border);
-    background: #FF69B4;
+    background: #28293E;
 }
 
 .msger-input {
     flex: 1;
-    background: rgba(255, 255, 255, 0.9);
+    background: var(--input-bg);
+    color: var(--input-text);
     border-radius: 20px;
+    border: 1px solid #FF69B4;
+    padding: 10px;
+    margin-right: 10px;
 }
 
 .msger-send-btn {
-    margin-left: 10px;
-    background: #FF1493;
-    color: #fff;
+    background: var(--button-bg);
+    color: #FFF;
     font-weight: bold;
     cursor: pointer;
     border-radius: 20px;
+    padding: 10px 20px;
+    border: none;
     transition: background 0.23s;
 }
 
 .msger-send-btn:hover {
-    background: #FF69B4;
+    background: var(--button-hover);
 }
