--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lwandle Ai</title>
+    <title>ChatGPT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
@@ -12,7 +12,7 @@
     <section class="msger">
         <header class="msger-header">
             <div class="msger-header-title">
-                <i>Lwandle AI</i>
+                <i>💖 Powered by GPT-3.5 Turbo 💖</i>
             </div>
         </header>
 
@@ -23,12 +23,12 @@
 
                 <div class="msg-bubble">
                     <div class="msg-info">
-                      
+                        <div class="msg-info-name">GPT-3.5 Turbo</div>
                         <div class="msg-info-time"></div>
                     </div>
 
                     <div class="msg-text">
-                        Hey. 🦋 Wanna Chat ✨ ?
+                        Hi, welcome to ChatGPT-3.5 Turbo! Say something to begin. 🌸
                     </div>
                 </div>
             </div>
@@ -69,6 +69,7 @@
 
         <div class="msg-bubble">
             <div class="msg-info">
+            <div class="msg-info-name">${name}</div>
             <div class="msg-info-time">${formatDate(new Date())}</div>
             </div>
 
@@ -100,5 +101,4 @@
         }
     </script>
 </body>
-</html>
 </html>
