--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <section class="msger">
         <header class="msger-header">
             <div class="msger-header-title">
-                <i>💖 Powered by GPT-3.5 Turbo 💖</i>
+                <i>Lwandle AI</i>
             </div>
         </header>
 
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="msg-text">
-                        Hi, welcome to ChatGPT-3.5 Turbo! Say something to begin. 🌸
+                        I Feel Sad Today. 🌸
                     </div>
                 </div>
             </div>
