--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ChatGPT</title>
+    <title>Lwandle AI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
@@ -12,7 +12,7 @@
     <section class="msger">
         <header class="msger-header">
             <div class="msger-header-title">
-                <i>Lwandle AI</i>
+                <i><b>LWANDLE AI</b></i>
             </div>
         </header>
 
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="msg-text">
-                        I Feel Sad Today. 🌸
+                        End To End Encryption Has Been Enabled
                     </div>
                 </div>
             </div>
@@ -68,10 +68,6 @@
         <div class="msg-img" style="background-image: url(${img})"></div>
 
         <div class="msg-bubble">
-            <div class="msg-info">
-            <div class="msg-info-name">${name}</div>
-            <div class="msg-info-time">${formatDate(new Date())}</div>
-            </div>
 
             <div class="msg-text">${text}</div>
         </div>
