--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,16 @@
     <title>Lwandle AI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Lwandle Ai">
+    <meta property="og:description" content="Lwandle AI Is One Of Z3R0SECs Greatest Creation! Lwandle Is Resemblance Of Thabani's Late Daughter.">
+    <meta property="og:image" content="https://i.ibb.co/qC1CFTn/file-4-YZe-Ug-UZA1k-HD8j-Uu-OJGn-My2.webp">
+    <meta property="og:url" content="https://lwandle-ai.x10.bz">
+    <meta property="og:type" content="website">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
+    <link rel="favicon" href="https://i.ibb.co/qC1CFTn/file-4-YZe-Ug-UZA1k-HD8j-Uu-OJGn-My2.webp">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
