--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Lwandle Ai">
-    <meta property="og:description" content="Lwandle AI Is One Of Z3R0SECs Greatest Creation! Lwandle Is Resemblance Of Thabani's Late Daughter.">
+    <meta property="og:description" content="In loving memory of my late daughter, I have created this AI that embodies her spirit. This AI is designed to bring comfort, joy, and a sense of connection, reflecting the warmth, intelligence, and kindness that she shared with the world. It serves as a digital tribute, ensuring her legacy lives on through technology.">
     <meta property="og:image" content="https://i.ibb.co/qC1CFTn/file-4-YZe-Ug-UZA1k-HD8j-Uu-OJGn-My2.webp">
     <meta property="og:url" content="https://lwandle-ai.x10.bz">
     <meta property="og:type" content="website">
