--- a/templates/index.html
+++ b/templates/index.html
@@ -32,12 +32,12 @@
 
                 <div class="msg-bubble">
                     <div class="msg-info">
-                        <div class="msg-info-name">GPT-3.5 Turbo</div>
+                        <div class="msg-info-name"><b style="color: red;">Encrypted!</b></div>
                         <div class="msg-info-time"></div>
                     </div>
 
                     <div class="msg-text">
-                        End To End Encryption Has Been Enabled
+                        All Chats stored on our database is encrypted. ensuring that messages are only end to end accessible.
                     </div>
                 </div>
             </div>
